--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,15 @@ h1 {
     margin-bottom: 15px;
 }
 
+h3 {
+    font-size: 15px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 300;
+    text-align: left;
+    margin-bottom: 15px;
+}
+
 table {
     width: 100%;
     table-layout: fixed;
